--- a/android/kotlin/TapResearchKotlinDemo/app/src/main/res/values/strings.xml
+++ b/android/kotlin/TapResearchKotlinDemo/app/src/main/res/values/strings.xml
@@ -2,10 +2,10 @@
     <string name="app_name">TapResearchKotlinDemo</string>
     <string name="api_token">856f987d813389d1243bea2e4731a0fb</string>
     <string-array name="placement_tags">
-        <item>default-placement-a</item>
-        <item>banner-placement-a</item>
-        <item>interstitial-placement-a</item>
-        <item>floating-interstitial-placement-a</item>
-        <item>capped-and-paced-interstitial-a</item>
+        <item>insert-placement-0</item>
+        <item>insert-placement-1</item>
+        <item>insert-placement-2</item>
+        <item>insert-placement-3</item>
+        <item>insert-placement-4</item>
     </string-array>
 </resources>
