added apiToken and earn-center tag

--- a/android/kotlin/TapResearchKotlinDemo/app/src/main/res/values/strings.xml
+++ b/android/kotlin/TapResearchKotlinDemo/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">TapResearchKotlinDemo</string>
     <string name="api_token">856f987d813389d1243bea2e4731a0fb</string>
     <string-array name="placement_tags">
-        <item>insert-placement-0</item>
+        <item>earn-center</item>
         <item>insert-placement-1</item>
         <item>insert-placement-2</item>
         <item>insert-placement-3</item>
